Iterative commit.  Making sure I don't lose anything.  Added Ivy and some various other stuff