@@ -1,5 +1,6 @@
 package main.java.server.state.enums;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 
@@ -9,7 +10,7 @@ public enum HeroJob {
 
     private static Random random = new Random();
 
-    static List<HeroJob> noviceJobs = List.of(INITIATE, SWORDSMAN);
+    static List<HeroJob> noviceJobs = Arrays.asList(INITIATE, SWORDSMAN);
 
     public static HeroJob getRandomNoviceJob() {
         return noviceJobs.get(random.nextInt(noviceJobs.size()));
